--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "add-zero": "^1.0.0",
     "axios": "^0.27.2",
     "expo": "~46.0.13",
+    "expo-barcode-scanner": "~11.4.0",
     "expo-cli": "^6.0.6",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -22,7 +23,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "expo-barcode-scanner": "~11.4.0"
+    "expo-contacts": "~10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
