--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-barcode-scanner": "~11.4.0",
     "expo-cli": "^6.0.6",
     "expo-contacts": "~10.3.0",
+    "expo-location": "~14.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
@@ -24,7 +25,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "expo-location": "~14.3.0"
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
